--- a/prune.yml
+++ b/prune.yml
@@ -1,14 +1,5 @@
 ---
-- name: Czyszczenie dockerów
+- name: Ping hosts
   hosts: all
   tasks:
-    - name: docker prune
-      become: True
-      docker_prune:
-        containers: yes
-        images: yes
-        images_filters:
-          dangling: false
-        networks: yes
-        volumes: yes
-        builder_cache: yes
+    - action: ping
