--- a/install_docker-pip.yml
+++ b/install_docker-pip.yml
@@ -2,4 +2,4 @@
   hosts: all
   tasks:
     - name: Just get the list from default pip
-      community.general.pip_package_info:
+      pip_package_info:
