--- a/install_docker-pip.yml
+++ b/install_docker-pip.yml
@@ -1,5 +1,5 @@
 - name: docker package installation
   hosts: all
   tasks:
-    - name: Just get the list from default pip
+    - name: Jussst get the list from default pip
       pip_package_info:
