--- a/install_docker-pip.yml
+++ b/install_docker-pip.yml
@@ -5,5 +5,6 @@
       apt:
         name: python3-pip
         state: present
-    - name: Ju22st get the list from default pip
+    - name: Just get the list from default pip
       pip_package_info:
+        executable: pip3
