--- a/install_docker-pip.yml
+++ b/install_docker-pip.yml
@@ -1,6 +1,7 @@
 - name: docker package installation
   hosts: all
-  become: no
+  gather_facts: False
+  become: True
   tasks:
     - name: install pip3
       apt:
